[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "1.16.0"
Fabric = "2.6.0"
matplotlib = "3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
